Fix positioning on small devices

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,11 @@
 .view {
-  margin-top: 60px;
+  margin-top: 4px;
   padding-top: 10px;
 }
 
 @media screen and (min-width: 1100px) {
   .view {
     display: flex;
+    margin-top: 60px;
   }
 }
